--- a/themes/malvy/template-parts/sections/home-banner/home-banner.css
+++ b/themes/malvy/template-parts/sections/home-banner/home-banner.css
@@ -1,8 +1,9 @@
 h1{
-    font-size: 48px;
-    color: #000;
-    text-align: center;
-    margin: 0 0 20px 0;
+    margin: 0 0 50px 0;
+    font-size: 100px;
+    font-weight: 700;
+    color: #fff;
+    text-align: left;
 }
 .swiper {
     width: 100%;
