add section and changes

--- a/themes/malvy/template-parts/sections/accordion-section/accordion-section.css
+++ b/themes/malvy/template-parts/sections/accordion-section/accordion-section.css
@@ -1,19 +1,23 @@
 .accordion-section {
-    margin: 100px 0;
+    padding: 100px 0;
+    overflow: hidden;
 }
 .accordion-section h2 {
-    margin: 0;
+    margin: 0 0 45px 0;
+    line-height: 1.33;
     text-align: center;
+    position: relative;
+    z-index: 2;
 }
 .accordion-section .wrapper {
     display: grid;
-    grid-template-columns: 1.115fr 1fr;
+    grid-template-columns: 1fr 1.07fr;
     align-items: center;
-    grid-gap: 135px;
+    grid-gap: 230px;
 }
 .accordion-section .img_wrap {
     position: relative;
-    padding-top: 660px;
+    padding-top: 100%;
 }
 .accordion-section .img_wrap img {
     width: 100%;
@@ -22,6 +26,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    border-radius: 50%;
 }
 .accordion-section .item {
     overflow: hidden;
@@ -62,11 +67,64 @@
 .accordion-section .item_content_intro {
     padding-top: 18px;
 }
-
+.left_box {
+    position: relative;
+}
+.accordion-section .circle {
+    display: block;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #0088BD;
+    z-index: 1;
+}
+.accordion-section .first-circle {
+    top: -70px;
+    left: 78px;
+}
+.accordion-section .second-circle {
+    width: 16px;
+    height: 16px;
+    top: -16px;
+    right: 110px;
+}
+.accordion-section .circle.big-circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 55px;
+    height: 55px;
+}
+.accordion-section .circle.small {
+    width: 16px;
+    height: 16px;
+}
+.accordion-section .third-circle {
+    top: 54px;
+    right: -88px;
+}
+.accordion-section .circle.another-color {
+    background-color: #EABCA5;
+}
+.accordion-section .fourth-circle {
+    right: -98px;
+    bottom: 170px;
+    width: 18px;
+    height: 18px;
+}
+.accordion-section .fifth-circle {
+    bottom: -75px;
+    right: 0;
+}
+.accordion-section .sixth-circle {
+    left: 150px;
+    bottom: -84px;
+    width: 36px;
+    height: 36px;
+}
 /*RESPONSIVE*/
 @media(max-width: 1350px) {
     .accordion-section .wrapper {
-        grid-gap: 7vw;
+        grid-gap: 13vw;
     }
 }
 @media(max-width: 991px) {
@@ -80,7 +138,7 @@
 }
 @media (max-width: 767px) {
     .accordion-section {
-        margin: 60px 0;
+        padding: 60px 0;
     }
     .accordion-section .item_title {
         font-size: 16px;
